https://online.sbis.ru/opendoc.html?guid=525fe906-c75e-48b9-8739-c4a19acb606a

--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -7,11 +7,11 @@
 @default-icon-size-large:                                                                                               32px;
 @default-line-height:                                                                                                   18px;
 @default-base-line-height:                                                                                              22px;//@default-height - 2 * @default-border-width
-@default-input-padding:                                                                                                 4px;
+@default-padding-small:                                                                                                 4px;
 //textbox
 @text-box-height:                                                                                                       @default-height;
 @text-box-font-size:                                                                                                    @default-font-size;
-@text-box-input-padding:                                                                                              0 @default-input-padding;
+@text-box-input-padding:                                                                                                0 @default-padding-small;
 @text-box-information-icon-size:                                                                                        13px;//по стандарту
 @text-box-border-radius:                                                                                                0px;
 //text-area
