--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -8,7 +8,7 @@
 @default-icon-size-large:                                                                                               3rem;
 @default-line-height:                                                                                                   1.5rem; //42px;
 @default-base-line-height:                                                                                              2.8571rem;//@default-height - 2 * @default-border-width
-@default-input-padding:                                                                                                 0.5rem;
+@default-padding-small:                                                                                                 0.5rem;
 //textbox
 @text-box-information-icon-size:                                                                                        1rem;
 //text-area
@@ -25,7 +25,7 @@
 @search-button-wrapper-padding:                                                                                         0;
 @search-loop-size:                                                                                                      2.8571rem;
 @search-form-icon-padding:                                                                                              0;
-@search-field-padding:                                                                                                  0 0 0 @default-input-padding;
+@search-field-padding:                                                                                                  0 0 0 @default-padding-small;
 //fieldLink
 @fieldLink-showAll-shadow-width:                                                                                        1rem;
 @fieldLink-linkItem-line-height:                                                                                        @default-base-line-height;
