https://online.sbis.ru/opendoc.html?guid=b2424bf3-400b-46e7-bf65-1f76f2a46a44

--- a/components/ScrollContainer/ScrollContainer.less
+++ b/components/ScrollContainer/ScrollContainer.less
@@ -17,6 +17,7 @@
       height: @controls-ScrollContainer-top-gradient-height;
       left: 0;
       width: 100%;
+      pointer-events: none; // чтобы можно было кликнуть сквозь тень
    }
    &:before {
       top: 0;
