--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -1110,3 +1110,8 @@ body {
     }
   }
 }
+
+//Убрать когда проектировщики сделают одинаковые отступы, обсуждали на этом совещании: https://online.sbis.ru/obj/Meeting/e6b722a9-d339-4016-9fd6-82b763c4e241
+.controls-ItemsToolbar.controls-ItemsToolbar__edit {
+  bottom: 0.2857rem;
+}
