https://online.sbis.ru/opendoc.html?guid=ed33d35b-29a8-4752-9aa3-7563ef2e57ee

--- a/components/OperationsPanel/OperationsPanel.less
+++ b/components/OperationsPanel/OperationsPanel.less
@@ -68,7 +68,7 @@
 
    &.controls-MenuIcon__Menu {
       .controls-MenuItem {
-         padding-right: 36px;
+         padding-right: @controls-OperationsPanel-menu-padding-right;
       }
    }
 
