Поля ввода дат: Поправил регрессии, убрал каскады в DateRange.
https://online.sbis.ru/opendoc.html?guid=61c45ca7-5c92-4e4a-8a55-ba0ad965da97

--- a/components/DateRange/DateRange.less
+++ b/components/DateRange/DateRange.less
@@ -14,21 +14,22 @@
          }
       }
    }
+}
 
-   .controls-DateRange__Button {
-      .controls-Button__icon {
-         font-size: @date-range-icon-button-size !important;
-         line-height: @date-range-icon-button-line-height !important;
-         height: @date-range-icon-button-size;
-         width: @date-range-icon-button-size;
-         margin: @date-range-icon-button-margin;
-      }
+.controls-DateRange__Button {
+   margin: @date-range-icon-button-margin;
+   // Иконка нестандартного размера. В следующую версию стандарта должна быть стандартной.
+   .controls-Button__icon {
+      font-size: @date-range-icon-button-size !important;
+      line-height: @date-range-icon-button-line-height !important;
+      height: @date-range-icon-button-size;
+      width: @date-range-icon-button-size;
    }
+}
 
-   .controls-DateRange__dash {
-      display: inline-block;
-      width: @date-range-dash-width;
-      margin: @date-range-dash-margin;
-      border-top: @date-range-dash-border-top;
-   }
+.controls-DateRange__dash {
+   display: inline-block;
+   width: @date-range-dash-width;
+   margin: @date-range-dash-margin;
+   border-top: @date-range-dash-border-top;
 }
