--- a/components/PasswordTextBox/resources/showPasswordTemplate.tmpl
+++ b/components/PasswordTextBox/resources/showPasswordTemplate.tmpl
@@ -1,7 +1,7 @@
 <ws:if data="{{showPassword}}">
    <ws:SBIS3.CONTROLS.IconButton
       name = "showPassword"
-      icon = "icon-24 icon-Show icon-disabled"
+      icon = "icon-medium icon-Show icon-disabled"
       tooltip = "Показать"
    />
 </ws:if>
