https://online.sbis.ru/opendoc.html?guid=525fe906-c75e-48b9-8739-c4a19acb606a

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -88,7 +88,7 @@
       }
    }
    &.ws-disabled .controls-FieldLink__item-caption {
-      margin-right: @default-padding-small;
+      margin-right: @default-input-padding;
    }
 
    &.controls-popup-revert-vertical {
@@ -285,7 +285,7 @@
 .controls-Link.controls-FieldLink__showAllLinks {
    position: relative;
    line-height: @default-base-line-height; // перебиваем стили controls-link
-   padding-left: @default-padding-small;
+   padding-left: @default-input-padding;
    display: none;
    .flex-shrink(0);
 }
