--- a/components/DataGridView/DataGridView.less
+++ b/components/DataGridView/DataGridView.less
@@ -27,6 +27,25 @@
    }
 }
 
+
+.controls-ListView__hoveredItem {
+   .controls-ListView__itemCheckBox {
+      .checkbox-border-size(@check-box-icon-size, @check-box-icon-box-size, @default-border-width);
+   }
+}
+.controls-ListView__item__multiSelected:not(.controls-ListView__item__partiallySelected) {
+   .controls-ListView__itemCheckBox {
+      .checkbox-border-size(@check-box-icon-size, @check-box-icon-box-size, @default-border-width);
+      .checkbox-checked-size(@check-box-icon-successful-size, @check-box-icon-successful-left, @check-box-icon-successful-top);
+   }
+}
+.controls-ListView__item__partiallySelected {
+   .controls-ListView__itemCheckBox {
+      .checkbox-border-size(@check-box-icon-size, @check-box-icon-box-size, @default-border-width);
+      .checkbox-null-size(@check-box-icon-size, @check-box-icon-null-size);
+   }
+}
+
 .controls-DataGridView {
    .controls-DataGridView__th, .controls-DataGridView__td {
       &.controls-DataGridView__firstContentCell {
