https://online.sbis.ru/opendoc.html?guid=525fe906-c75e-48b9-8739-c4a19acb606a

--- a/components/DateRange/DateRange.less
+++ b/components/DateRange/DateRange.less
@@ -7,8 +7,8 @@
          border: none !important;
          background: transparent !important;
          .controls-FormattedTextBox__fieldWrapper.controls-DateBox__fieldWrapper {
-            border-width: @date-box-wrapper-error-border-width;
-            border-style: @date-box-wrapper-error-border-style;
+            border-width: @default-border-width;
+            border-style: solid;
             border-color: @date-box-wrapper-error-border-color;
             background: @date-box-wrapper-error-bg;
          }
