--- a/components/DateBox/DateBox.less
+++ b/components/DateBox/DateBox.less
@@ -8,8 +8,8 @@
 
    .controls-FormattedTextBox__fieldWrapper {
       .border-radius(@date-box-wrapper-border-radius);
-      border-width: @date-box-wrapper-border-width;
-      border-style: @date-box-wrapper-border-style;
+      border-width: @default-border-width;
+      border-style: solid;
       border-color: @text-box-border-color;
       border-bottom-color: @text-box-border-color-bottom;
       background: @date-box-wrapper-bg;
@@ -23,9 +23,9 @@
 
    &.ws-has-focus {
       .controls-FormattedTextBox__fieldWrapper {
-         border-width: @date-box-wrapper-focus-border-width;
-         border-style: @date-box-wrapper-focus-border-style;
-         border-color: @date-box-wrapper-focus-border-color;
+         border-width: @default-border-width;
+         border-style: solid;
+         border-color: @text-box-border-color-hover;
          background: @date-box-wrapper-focus-bg;
       }
    }
@@ -35,8 +35,8 @@
       background: transparent !important;
 
       & > .controls-DateBox__fieldWrapper {
-         border-width: @date-box-wrapper-error-border-width;
-         border-style: @date-box-wrapper-error-border-style;
+         border-width: @default-border-width;
+         border-style: solid;
          border-color: @date-box-wrapper-error-border-color;
          background: @date-box-wrapper-error-bg;
       }
@@ -44,19 +44,18 @@
 
    &:hover {
       .controls-FormattedTextBox__fieldWrapper {
-         border-width: @date-box-wrapper-hover-border-width;
-         border-style: @date-box-wrapper-hover-border-style;
+         border-width: @default-border-width;
+         border-style: solid;
          border-color: @date-box-wrapper-hover-border-color;
-         background: @date-box-wrapper-hover-bg;
       }
    }
 
    &.ws-disabled {
       .controls-FormattedTextBox__fieldWrapper {
-         border-width: @date-box-wrapper-disabled-border-width;
-         border-style: @date-box-wrapper-disabled-border-style;
-         border-color: @date-box-wrapper-disabled-border-color;
-         background: @date-box-wrapper-disabled-bg;
+         border-width: @default-border-width;
+         border-style: solid;
+         border-color: transparent;
+         background: transparent;
          border-bottom-color: @text-box-border-color-bottom-disabled;
       }
    }
