--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -802,76 +802,13 @@
 // -------- //
 // Text box //
 // -------- //
-
-
-@text-box-field-text-alignment:           left;
-@text-box-field-min-height:               19px;
-@text-box-field-line-height:              20px !important;
-@text-box-field-margin:                   0;
-@text-box-field-padding:                  1px 0;
-@text-box-field-border:                   none;
-@text-box-field-outline:                  none;
-@text-box-field-bg:                       transparent;
-@text-box-field-after-margin:             0 19px 0 0;
-
-@text-box-field-text-color:               inherit;
-@text-box-field-hover-text-color:         @text-box-field-text-color;
-@text-box-field-disabled-text-color:      @text-box-field-text-color;
-
-@text-box-border-width:                   1px;
-@text-box-border-style:                   solid;
-@text-box-bottom-border-color:            #ccc;
-@text-box-editor-bg:                      @white-color;
-@text-box-editor-text-color:              inherit;
-
-@text-box-focus-border-width:             @text-box-border-width;
-@text-box-focus-border-style:             @text-box-border-style;
 @text-box-focus-border-color:             #ccc;
 @text-box-focus-bg:                       @text-box-bg;
-
-@text-box-error-border-width:             @text-box-border-width;
-@text-box-error-border-style:             @text-box-border-style;
-@text-box-error-border-color:             #ff302b !important;
-@text-box-error-bg:                       #fadadd !important;
-
-@text-box-hover-border-width:             @text-box-focus-border-width;
-@text-box-hover-border-style:             @text-box-focus-border-style;
 @text-box-hover-border-color:             @text-box-focus-border-color;
-@text-box-hover-bg:                       @text-box-bg;
-
-@text-box-disabled-border-width:          @text-box-border-width;
-@text-box-disabled-border-style:          @text-box-border-style;
-@text-box-disabled-border-color:          transparent transparent #e4e4e4 transparent;
-@text-box-disabled-bg:                    transparent;
-@text-box-disabled-border-bottom:         1px solid #E4E4E4;
-
-@text-box-after-width:                    16px;
-@text-box-after-min-height:               @text-box-field-min-height;
-@text-box-after-margin:                   0;
-
-@text-box-placeholder-color:              @gray-ccc-color !important;
-@text-box-compat-placeholder-font:        inherit;
-@text-box-compat-placeholder-alignment:   inherit;
-
-@text-box-overflow:                       ellipsis;
-
-
-
-// ------------------ //
-// Formatted text box //
-// ------------------ //
-@formatted-text-box-line-height:                normal;
-@formatted-text-box-wrapper-min-height:         22px;
-@formatted-text-box-error-border-width:         @text-box-error-border-width;
-@formatted-text-box-error-border-style:         @text-box-error-border-style;
-@formatted-text-box-error-border-color:         @text-box-error-border-color;
-@formatted-text-box-error-bg:                   @text-box-error-bg;
 // --------------- //
 // Money text box  //
 // --------------- //
-
 @money-text-box-min-width:            102px;
-
 @money-text-box-decimals-padding:     1px 0;
 @money-text-box-decimals-font-size:   12px;
 @money-text-box-decimals-color:                       @gray-ccc-color;
@@ -881,48 +818,21 @@
 // ----------- //
 @date-box-color:                             @text-box-color;
 @date-box-wrapper-border-radius:             @text-box-border-radius;
-
-@date-box-wrapper-border-width:              @text-box-border-width;
-@date-box-wrapper-border-style:              @text-box-border-style;
-@date-box-wrapper-border-color:              @text-box-border-color;
 @date-box-wrapper-bg:                        @text-box-bg;
-@date-box-field-text-color:                  @text-box-field-text-color;
-
-@date-box-wrapper-focus-border-width:        @date-box-wrapper-border-width;
-@date-box-wrapper-focus-border-style:        @date-box-wrapper-border-style;
-@date-box-wrapper-focus-border-color:        @text-box-focus-border-color;
+@date-box-field-text-color:                  @default-text-color;
 @date-box-wrapper-focus-bg:                  @text-box-focus-bg;
-
-@date-box-wrapper-error-border-width:        @text-box-error-border-width;
-@date-box-wrapper-error-border-style:        @text-box-error-border-style;
-@date-box-wrapper-error-border-color:        @text-box-error-border-color;
-@date-box-wrapper-error-bg:                  @text-box-error-bg;
-
-@date-box-wrapper-hover-border-width:        @date-box-wrapper-border-width;
-@date-box-wrapper-hover-border-style:        @date-box-wrapper-border-style;
+@date-box-wrapper-error-border-color:        @text-box-border-color-error;
+@date-box-wrapper-error-bg:                  @text-box-bg-error;
 @date-box-wrapper-hover-border-color:        @text-box-hover-border-color;
-@date-box-wrapper-hover-bg:                  @text-box-hover-bg;
-
-@date-box-wrapper-disabled-cursor:           default;
-@date-box-wrapper-disabled-border-width:     @date-box-wrapper-border-width;
-@date-box-wrapper-disabled-border-style:     @date-box-wrapper-border-style;
-@date-box-wrapper-disabled-border-color:     transparent;
-@date-box-wrapper-disabled-bg:               @text-box-disabled-bg;
 
 // ----------- //
 // Search form //
 // ----------- //
-
-@search-disabled-background:                          @search-background;
-@search-focus-background:                             @search-background;
-@search-height:                                       @text-box-height;
 @search-padding:                                      0 24px 0 16px;
 @search-left-margin:                                  12px;
 @search-border-color:                                 @search-background;
 @search-hover-border-color:                           @search-background;
 @search-bottom-border-color:                          @search-background;
-@search-form-border-width:                            @text-box-border-width;
-@search-form-border-disabled-width:                   @text-box-disabled-border-width;
 @search-buttons-wrapper-width:                        20px + 20px;
 @search-form-field-wrapper-margin-right:              45px;
 @search-form-icon-disabled-display:                   block;
@@ -988,7 +898,6 @@
 @combo-box-picker-item-selected-bg:             @default-itemSelected-color;
 
 @compo-box-fieldWrapper-margin-right:           16px;
-@combo-box-after-width:                         @text-box-after-width;
 
 @compo-box-picker-show-color:                   @default-text-color;
 @combo-box-picker-show-border-color:            @gray-ccc-color;
@@ -1254,8 +1163,8 @@
 
 @date-range-slider-error-border-width:             1px;
 @date-range-slider-error-border-style:             solid;
-@date-range-slider-error-border-color:             @text-box-error-border-color;
-@date-range-slider-error-bg:                       @text-box-error-bg;
+@date-range-slider-error-border-color:             @text-box-border-color-error;
+@date-range-slider-error-bg:                       @text-box-bg-error;
 
 @date-range-slider-picker-shadow:                  0px 0px 12px 0px rgba(0,0,0,0.25);
 
