https://online.sbis.ru/opendoc.html?guid=fcf783f2-4f85-46ee-b70b-546f5a50e9f5

--- a/Controls-default-theme/aliases/_dropdownPopup.less
+++ b/Controls-default-theme/aliases/_dropdownPopup.less
@@ -25,6 +25,13 @@
 
 
 
+// Параметры для поиска
+@search_width_menuPopup:                            184px;
+@search_offset-right_menuPopup:                     12px;
+@search_item_padding-left_menu:                     24px;
+
+
+
 // Параметры для элементов меню
 //
 // Разделители
