--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -3,11 +3,11 @@
    box-sizing: border-box;
 }
 
-.controls-BreadCrumbsPath__twoRows {
+.controls-BreadCrumbsPath__twoRows_theme-@{themeName} {
    padding-left: @spacing_Path-between-home-and-leftEdge;
 }
 
-.controls-BreadCrumbsPath__wrapper {
+.controls-BreadCrumbsPath__wrapper_theme-@{themeName} {
    display: flex;
    white-space: nowrap;
 
@@ -23,7 +23,7 @@
    max-width: 100%;
 }
 
-.controls-BreadCrumbsPath__home {
+.controls-BreadCrumbsPath__home_theme-@{themeName} {
    .icon(@font-size_Path-home);
    cursor: pointer;
    color: @color_Path-home;
@@ -31,7 +31,7 @@
    min-width: @min-width_Breadcrumbs-home;
 }
 
-.controls-BreadCrumbsPath__backButton__wrapper {
+.controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName} {
    position: relative;
    display: inline-flex;
    align-items: baseline;
@@ -54,7 +54,7 @@
    max-width: 100%;
 }
 
-.controls-BreadCrumbsPath__backButtonArrow-container {
+.controls-BreadCrumbsPath__backButtonArrow-container_theme-@{themeName} {
    .baseline-fix();
    height: 100%;
    position: absolute;
@@ -68,24 +68,24 @@
    }
 }
 
-.controls-BreadCrumbsPath__backButtonArrow {
+.controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName} {
    .icon(@font-size_Path-backButtonArrow);
    display: none;
    color: @color_Path-backButtonArrow;
    cursor: pointer;
 }
 
-.controls-Path__backButtonArrow_readonly {
+.controls-Path__backButtonArrow_readonly_theme-@{themeName} {
    color: @color_Path-backButtonArrow_readonly;
 }
 
 //Необходимо добавить отступ шеврону для того, чтобы он не наезжал на кнопку назад. Отодвигаем на ширину иконки, не считая паддинга после кнопки.
 //Так как ширина и высота иконки шеврона равна размеру @font-size_Path-backButtonArrow, отодвигаем на эту величину.
 //TODO remove after TODO https://online.sbis.ru/opendoc.html?guid=aedf32aa-28db-40b7-abae-e740021cc782
-.controls-BreadCrumbsPath__backButtonArrow_outsideBackButton {
+.controls-BreadCrumbsPath__backButtonArrow_outsideBackButton_theme-@{themeName} {
    margin-right: -(@font-size_Path-backButtonArrow - @spacing_Path-between-home-and-backButton);
 }
-.controls-BreadCrumbsPath__counter {
+.controls-BreadCrumbsPath__counter_theme-@{themeName} {
    margin-left: @spacing_Path-between-back-and-counter;
 }
 
@@ -93,11 +93,11 @@
    overflow: hidden;
    flex-grow: 1;
 }
-.controls-BreadCrumbsPath__breadCrumbs_home-path-spacing {
+.controls-BreadCrumbsPath__breadCrumbs_home-path-spacing_theme-@{themeName} {
    padding-left: @spacing_Path-between-home-and-crumbs;
 }
 
-.controls-BreadCrumbsPath__homeContainer {
+.controls-BreadCrumbsPath__homeContainer_theme-@{themeName} {
    .baseline-fix();
 
    position: relative;
@@ -130,15 +130,15 @@
 }
 
 .ws-is-hover {
-   .controls-BreadCrumbsPath__backButtonArrow:hover {
+   .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName}:hover {
       color: @color_Path-backButtonArrow_hovered;
       display: inline-flex;
    }
-   .controls-BreadCrumbsPath__backButton__wrapper:hover .controls-BreadCrumbsPath__backButtonArrow {
+   .controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName}:hover .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName} {
       display: inline-flex;
    }
 
-   .controls-BreadCrumbsPath__home:hover {
+   .controls-BreadCrumbsPath__home_theme-@{themeName}:hover {
       color: @color_Path-home_hovered;
    }
 }
