https://online.sbis.ru/opendoc.html?guid=71e8bac9-a1c0-4c39-839c-253b713c4823

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -25,10 +25,12 @@
 
 .controls-BreadCrumbsPath__home_theme-@{themeName} {
    .icon(@font-size_Path-home);
-   cursor: pointer;
    color: @color_Path-home;
-   flex-shrink: 0;
    min-width: @min-width_Breadcrumbs-home;
+}
+.controls-BreadCrumbsPath__home {
+   cursor: pointer;
+   flex-shrink: 0;
 }
 
 .controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName} {
