--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -59,6 +59,7 @@
    left: @spacing_BreadCrumbs-menu;
    background: @background-color_BreadCrumbs-menu;
    box-shadow: @box-shadow_BreadCrumbs-menu;
+   color: @color_BreadCrumbs-title;
    height: @height_BreadCrumbs-items;
    &:before {
       font-size: @font-size_BreadCrumbs-baseline;
