https://online.sbis.ru/opendoc.html?guid=71e8bac9-a1c0-4c39-839c-253b713c4823

--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -107,7 +107,7 @@
    display: inline;
 }
 
-.controls-BreadCrumbsView__title_enabled_theme-@{themeName} {
+.controls-BreadCrumbsView__title_enabled {
    cursor: pointer;
 }
 
