https://online.sbis.ru/opendoc.html?guid=9b82ac84-8f59-4ba7-b859-cc16bdfc31ec

--- a/Controls/_filterPopup/Panel/_Panel.less
+++ b/Controls/_filterPopup/Panel/_Panel.less
@@ -105,7 +105,7 @@
    width: 50%;
    box-sizing: border-box;
    margin-bottom: @padding-bottom_filterPanel;
-   padding: @history_offset_filterPanel @history_content_padding-right_filterPanel 0 @history_heading_padding-left_filterPanel;
+   padding: 0 @history_content_padding-right_filterPanel 0 @history_heading_padding-left_filterPanel;
    border-left: @separator_thickness_filterPanel solid @separator_color_filterPanel;
 }
 
