https://online.sbis.ru/opendoc.html?guid=4daa9eae-2a7a-4a86-9bb5-446f2424ca72 Поправил стили

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -738,7 +738,7 @@
    position: relative;
    right: -@tag_offset-horizontal_gridView;
 
-   .controls-InputTag_theme-@{themeName} {
+   .controls__tag_theme-@{themeName} {
       top: -@tag_offset-vertical_gridView;
    }
 }
