--- a/Controls/_popupTemplate/Stack/_Stack.less
+++ b/Controls/_popupTemplate/Stack/_Stack.less
@@ -50,6 +50,12 @@
 
 .controls-StackTemplate__top-area-background_theme_@{themeName} {
    background: @header_background-color_stack;
+
+   //TODO: will be deleted after https://online.sbis.ru/opendoc.html?guid=08925c8d-d7d1-4588-989f-3279e0675557
+   .controls-BreadCrumbsView__menu__dots {
+      background-color: @header_background-color_stack;
+      box-shadow: -15px 2px 4px -6px @header_background-color_stack;
+   }
 }
 
 .controls-StackTemplate__top-area-border_theme_@{themeName} {
