https://online.sbis.ru/opendoc.html?guid=6c91b091-a372-47b8-aa39-bddc7c4c0d63

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -225,29 +225,12 @@
    }
 
 }
-.ws-is-hover {
-   .controls-Grid__row_highlightOnHover_default_theme-@{themeName}.controls-Grid_row-cell_hovered_theme-@{themeName} {
-      background-color: @background-color_Grid-row_hover;
+.ws-is-hover .controls-BaseControl_showActions .controls-Grid__row:hover {
+   .controls-Grid__editArrow-blur_theme-@{themeName},
+   .controls-Grid__editArrow-wrapper_theme-@{themeName} {
+      visibility: visible;
    }
 
-   .controls-BaseControl_showActions {
-      .controls-Grid_row-cell_hovered_theme-@{themeName},
-      .controls-Grid__row:hover {
-         .controls-Grid__editArrow-blur_theme-@{themeName},
-         .controls-Grid__editArrow-wrapper_theme-@{themeName} {
-            visibility: visible;
-         }
-      }
-   }
-
-   .controls-BaseControl_showActions .controls-Grid_row-cell_hovered_theme-@{themeName} > .controls-itemActionsV {
-      display: inline-block;
-   }
-
-   // Class controls-Grid_row-cell_hovered adds on all cells of hovered item only in browsers with partial grid support.
-   .controls-Grid_row-cell_hovered_theme-@{themeName} .controls-ListView__checkbox-onhover {
-      display: inline-block;
-   }
 }
 
 .controls-Grid__row-cell-background-editing_theme-@{themeName} {
@@ -578,11 +561,6 @@
    .controls-Grid__row_master_theme-@{themeName}:hover .controls-Grid__row-cell-background-hover_theme-@{themeName} .controls-BreadCrumbsView__menu__dots {
       background-color: @background-color_List-masterList-item_hover;
       box-shadow: -15px 2px 4px -6px @background-color_List-masterList-item_hover;
-   }
-}
-.ws-is-no-touch {
-   .controls-Grid__row_master_theme-@{themeName}.controls-Grid_row-cell_hovered_theme-@{themeName} {
-      background-color: @background-color_List-masterList-item_hover;
    }
 }
 
