https://online.sbis.ru/opendoc.html?guid=4da4b5cd-3d39-463c-9ce5-f103d74e4362

--- a/Controls/_listRender/Columns/_Columns.less
+++ b/Controls/_listRender/Columns/_Columns.less
@@ -1,5 +1,5 @@
 .controls-ColumnsView__itemsContainer {
-   display: flex;
+   display: grid;
    flex-direction: row;
    justify-content: flex-start;
 }
@@ -11,6 +11,7 @@
 
 .controls-ColumnsView__itemsContainer {
    margin: 0 @side-spacing_ColumnsView_columns;
+   column-gap: @side-spacing_ColumnsView_columns_val * 2;
 }
 
 .controls-ColumnsView__itemV {
