https://online.sbis.ru/opendoc.html?guid=049e8c02-6b62-4c89-b8ab-e25c2c680bb9

--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -1,8 +1,10 @@
-.controls-BreadCrumbsView__items_theme-@{themeName} {
+.controls-BreadCrumbsView__items {
    display: inline-flex;
    overflow: hidden;
-   height: @height_BreadCrumbs-items;
    width: 100%;
+}
+.controls-BreadCrumbsView__items_theme-@{themeName} {
+   height: @height_BreadCrumbs-items;
 }
 .controls-BreadCrumbsView__itemsTemplate {
    display: flex;
@@ -42,11 +44,13 @@
       font-size: @font-size_BreadCrumbs-baseline;
    }
 }
-.controls-BreadCrumbsView__menu_theme-@{themeName} {
+.controls-BreadCrumbsView__menu {
    float: right;
    position: relative;
-   bottom: @height_BreadCrumbs-items;
    z-index: 5;
+}
+.controls-BreadCrumbsView__menu_theme-@{themeName} {
+   bottom: @height_BreadCrumbs-items;
 }
 .controls-BreadCrumbsView__menu__dots {
    position: absolute;
@@ -111,20 +115,24 @@
    cursor: pointer;
 }
 
-.controls-BreadCrumbsView__title_theme-@{themeName} {
+.controls-BreadCrumbsView__title {
    .text-overflow();
-   font-size: @font-size_BreadCrumbs-title;
    display: inline;
 }
+.controls-BreadCrumbsView__title_theme-@{themeName} {
+   font-size: @font-size_BreadCrumbs-title;
+}
 
-.controls-BreadCrumbsView__arrow_theme-@{themeName} {
-   .icon(@font-size_BreadCrumbs-arrow);
-   color: @color_BreadCrumbs-arrow;
+.controls-BreadCrumbsView__arrow {
    flex-shrink: 0;
    display: inline;
 }
+.controls-BreadCrumbsView__arrow_theme-@{themeName}{
+   .icon(@font-size_BreadCrumbs-arrow);
+   color: @color_BreadCrumbs-arrow;
+}
 
-.controls-BreadCrumbsView__arrow_enabled_theme-@{themeName} {
+.controls-BreadCrumbsView__arrow_enabled {
    cursor: pointer;
 }
 
@@ -132,14 +140,15 @@
    max-width: @max-width_BreadCrumbs-menu;
 }
 
-.controls-BreadCrumbsView__menuItem_theme-@{themeName} {
+.controls-BreadCrumbsView__menuItem {
    .baseline-fix();
    max-width: 100%;
    display: inline-flex;
    align-items: center;
+}
+.controls-BreadCrumbsView__menuItem_theme-@{themeName} {
    height: @height_BreadCrumbs-menuItem;
 }
-
 .controls-BreadCrumbsView__menuTitle {
    .text-overflow();
    flex-shrink: 1;
@@ -147,11 +156,13 @@
    width: 100%;
 }
 
+.controls-BreadCrumbsView__indentation {
+   align-self: flex-start;
+   flex-shrink: 0;
+}
 .controls-BreadCrumbsView__indentation_theme-@{themeName} {
    .icon(@font-size_BreadCrumbs-hierarchyIcon);
    color: @color_BreadCrumbs-hierarchyIcon;
-   align-self: flex-start;
-   flex-shrink: 0;
 }
 
 .ws-is-hover {
@@ -184,7 +195,7 @@
 .ws-is-ie12 {
 
    //В Edge без явного указания ширины контейнера неправильно работает float, из-за чего точки не падают вниз. Пример: https://jsfiddle.net/q70vkn94/
-   .controls-BreadCrumbsView__menu_theme-@{themeName} {
+   .controls-BreadCrumbsView__menu {
       width: 1px;
    }
 }
