--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -7,7 +7,7 @@
    padding-left: @spacing_Path-between-home-and-leftEdge;
 }
 
-.controls-BreadCrumbsPath__wrapper_theme-@{themeName} {
+.controls-BreadCrumbsPath__wrapper {
    display: flex;
    white-space: nowrap;
 
@@ -33,13 +33,15 @@
    flex-shrink: 0;
 }
 
-.controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName} {
+.controls-BreadCrumbsPath__backButton__wrapper {
    position: relative;
    display: inline-flex;
    align-items: baseline;
-   padding-right: @spacing_Path-between-home-and-backButton;
    max-width: 50%;
    flex-shrink: 0;
+}
+.controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName} {
+   padding-right: @spacing_Path-between-home-and-backButton;
 }
 
 .controls-BreadCrumbsPath__backButton__wrapper__only {
@@ -56,7 +58,7 @@
    max-width: 100%;
 }
 
-.controls-BreadCrumbsPath__backButtonArrow-container_theme-@{themeName} {
+.controls-BreadCrumbsPath__backButtonArrow-container {
    .baseline-fix();
    height: 100%;
    position: absolute;
@@ -64,17 +66,21 @@
    align-items: baseline;
    right: 0;
    bottom: 0;
+}
+.controls-BreadCrumbsPath__backButtonArrow-container_theme-@{themeName} {
    background-color: @background-color_Path-backButtonArrow;
    &:before {
       font-size:@font-size_BreadCrumbs-baseline;
    }
 }
 
+.controls-BreadCrumbsPath__backButtonArrow {
+   display: none;
+   cursor: pointer;
+}
 .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName} {
    .icon(@font-size_Path-backButtonArrow);
-   display: none;
    color: @color_Path-backButtonArrow;
-   cursor: pointer;
 }
 
 .controls-Path__backButtonArrow_readonly_theme-@{themeName} {
@@ -99,14 +105,16 @@
    padding-left: @spacing_Path-between-home-and-crumbs;
 }
 
-.controls-BreadCrumbsPath__homeContainer_theme-@{themeName} {
+.controls-BreadCrumbsPath__homeContainer {
    .baseline-fix();
 
    position: relative;
    display: inline-flex;
    align-items: baseline;
+}
+.controls-BreadCrumbsPath__homeContainer_theme-@{themeName} {
    &:before {
-     font-size: @font-size_BreadCrumbs-baseline;
+      font-size: @font-size_BreadCrumbs-baseline;
    }
 }
 
@@ -134,9 +142,11 @@
 .ws-is-hover {
    .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName}:hover {
       color: @color_Path-backButtonArrow_hovered;
+   }
+   .controls-BreadCrumbsPath__backButtonArrow:hover {
       display: inline-flex;
    }
-   .controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName}:hover .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName} {
+   .controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName}:hover .controls-BreadCrumbsPath__backButtonArrow {
       display: inline-flex;
    }
 
