https://online.sbis.ru/opendoc.html?guid=049e8c02-6b62-4c89-b8ab-e25c2c680bb9

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -146,7 +146,7 @@
    .controls-BreadCrumbsPath__backButtonArrow:hover {
       display: inline-flex;
    }
-   .controls-BreadCrumbsPath__backButton__wrapper_theme-@{themeName}:hover .controls-BreadCrumbsPath__backButtonArrow {
+   .controls-BreadCrumbsPath__backButton__wrapper:hover .controls-BreadCrumbsPath__backButtonArrow {
       display: inline-flex;
    }
 
