https://online.sbis.ru/opendoc.html?guid=049e8c02-6b62-4c89-b8ab-e25c2c680bb9

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -81,6 +81,7 @@
 .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName} {
    .icon(@font-size_Path-backButtonArrow);
    color: @color_Path-backButtonArrow;
+   display: none;
 }
 
 .controls-Path__backButtonArrow_readonly_theme-@{themeName} {
