--- a/Controls/_search/Input/_Search.less
+++ b/Controls/_search/Input/_Search.less
@@ -3,6 +3,17 @@
 .controls-Render_state-search-invalidAccent_theme-@{themeName} {
    border-color: @border-color_Search;
    background: @background-color_Search;
+
+   &:focus-within {
+      border-color: @border-color_Search_active;
+   }
+}
+
+.controls-Render_state-search-valid-active_theme-@{themeName},
+.controls-Render_state-search-invalid-active_theme-@{themeName},
+.controls-Render_state-search-invalidAccent-active_theme-@{themeName} {
+   border-color: @border-color_Search_active;
+   background: @background-color_Search;
 }
 
 .controls-Render_state-searchContrast-valid_theme-@{themeName},
@@ -10,24 +21,15 @@
 .controls-Render_state-searchContrast-invalidAccent_theme-@{themeName} {
    border-color: @border-color_Search;
    background: @background-color_Search_contrast_background;
-}
 
-.controls-Render_state-search-valid-active_theme-@{themeName},
-.controls-Render_state-search-invalid-active_theme-@{themeName},
-.controls-Render_state-search-invalidAccent-active_theme-@{themeName},
-.controls-Render_state-search-valid_theme-@{themeName}:focus-within,
-.controls-Render_state-search-invalid_theme-@{themeName}:focus-within,
-.controls-Render_state-search-invalidAccent_theme-@{themeName}:focus-within {
-   border-color: @border-color_Search_active;
-   background: @background-color_Search;
+   &:focus-within {
+      border-color: @border-color_Search_active;
+   }
 }
 
 .controls-Render_state-searchContrast-valid-active_theme-@{themeName},
 .controls-Render_state-searchContrast-invalid-active_theme-@{themeName},
-.controls-Render_state-searchContrast-invalidAccent-active_theme-@{themeName},
-.controls-Render_state-searchContrast-valid_theme-@{themeName}:focus-within,
-.controls-Render_state-searchContrast-invalid_theme-@{themeName}:focus-within,
-.controls-Render_state-searchContrast-invalidAccent_theme-@{themeName}:focus-within {
+.controls-Render_state-searchContrast-invalidAccent-active_theme-@{themeName} {
    border-color: @border-color_Search_active;
    background: @background-color_Search_contrast_background;
 }
