--- a/Controls/_breadcrumbs/View/_View.less
+++ b/Controls/_breadcrumbs/View/_View.less
@@ -4,7 +4,7 @@
    width: 100%;
 }
 .controls-BreadCrumbsView__items_theme-@{themeName} {
-   height: @@height_breadcrumbsView;
+   height: @height_breadcrumbsView;
 }
 .controls-BreadCrumbsView__itemsTemplate {
    display: flex;
