https://online.sbis.ru/opendoc.html?guid=7dbd8fe7-d124-46c1-a983-45ff57ce8e26

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -132,11 +132,11 @@
 }
 
 .controls-Grid__row-result-cell__content-font-color-style_secondary_theme-@{themeName} {
-   color: @secondary_color;
+   color: @secondary_text-color;
 }
 
 .controls-Grid__row-result-cell__content-font-color-style_unaccented_theme-@{themeName} {
-   color: @unaccented_color;
+   color: @unaccented_text-color;
 }
 
 .controls-Grid__row-result-cell__content-font-color-style_readonly_theme-@{themeName} {
