https://online.sbis.ru/opendoc.html?guid=592a2d4d-d15e-4396-9c00-a9cc17495aeb

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -1,6 +1,3 @@
-// ultra new theme specification
-@import "../_aliases";
-
 @background-color:                                    #424851;
 @hover_background-color:                              #464D57;
 @danger_color:                                        #D04D4D;
@@ -49,7 +46,7 @@
 @invalid_background-color_inputText:                  transparent;
 
 //dialog
-@background-color_dialog:                             #383D44;
+@background-color_dialog:                             #4a515d;
 @header_background-color_dialog:                      #383D44;
 @border-color_dialog:                                 #535C68;
 @footer_background-color_dialog:                      transparent;
@@ -66,6 +63,9 @@
 @secondary_marker_color_confirmation:                 #6ed4d0;
 @footer_background-color_confirmation:                #4a515d;
 @footer_top-border-color_confirmation:                #6d737c;
+
+//sticky
+@background-color_sticky:                             #383d44;
 
 //notification
 @secondary_marker_color_notification:                 @secondary_color;
@@ -122,6 +122,8 @@
 @caret-color_empty_searchInput:                       #6b6b6b;
 @border-color_searchInput:                            #656d79;
 @border-color_focus_searchInput:                      #656d79;
+@border-color_hover_searchInput:                      #656d79;
+@caret-color_empty_searchInput:                       #ccc;
 
 //FilterView
 @reset-button_icon-color_filterView:                  #999999;
@@ -138,6 +140,10 @@
 //Lookup
 @trigger_icon-color_lookupInput:                         @secondary_color;
 
+// Suggest
+@popup_border-color_suggest:                                                  #4d535e;
+
+
 
 //TODO OLD NOT SPECIFIED VARIABLES
 
@@ -145,11 +151,6 @@
 @cloud-border-color:                                                          #535c68;
 @cloud-light-border-color:                                                    #6b6b6b;
 @cloud-acc-border-color:                                                      #404040;
-
-
-// Search
-@border-color_hover_searchInput:                                              #656d79;
-@caret-color_empty_searchInput:                                               #ccc;
 
 @marker-bg-image:                                                             url("img/rowSelect.png");
 @readonly_marker-color:                                                       @readonly_color;
@@ -225,19 +226,4 @@
 
 @color_Paging_arrow-icon:                                                     @secondary_color;
 
-// Suggest
-@popup_border-color_suggest:                                                  #4d535e;
-
-// Functional Buttons
-@secondary_background-color_button_functionalButton:                          #6ED4D0;
-@success_background-color_button_functionalButton:                            #62AC62;
-@secondary_hover_background-color_button_functionalButton:                    #5EB4B1;
-@success_hover_background-color_button_functionalButton:                      #539253;
-@contrast_icon-color:                                                         #383D44;
-
-// ConfirmationTemplate
-@background-color_dialog:                                                     #4a515d;
-
-//popupTemplate
-@background-color_sticky:                                                     #383d44;
 //last line
