https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -2,6 +2,7 @@
 @import "_datePicker";
 @import "_dateRange";
 @import "_decorator";
+@import "_dragnDrop";
 @import "_slider";
 @import "_input";
 @import "_editableArea";
