https://online.sbis.ru/opendoc.html?guid=095c3530-e38e-41cf-897a-7f047a29b48b общие стили для приложения

--- a/Controls-default-theme/_aliases.less
+++ b/Controls-default-theme/_aliases.less
@@ -27,6 +27,10 @@
 @link_text-color:                   #0055BB;
 @link_hover_text-color:             #313E78;
 @unaccented_text-color:             @unaccented_color;
+@link_text-color_inline:            @link_hover_text-color;
+@link_hover_text-color_inline:      @link_text-color;
+
+
 
 // Цвета иконок
 
