--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -14,6 +14,8 @@
 @label_text-color:                                    #CCCCCC;
 @link_text-color:                                     #6ED4D0;
 @link_hover_text-color:                               #FF7033;
+@link_text-color_inline:                              @link_text-color;
+@link_hover_text-color_inline:                        @link_hover_text-color;
 
 //button
 @primary_border-color_button:                                           #eb6c65;
@@ -154,13 +156,6 @@
 
 @marker-bg-image:                                                             url("img/rowSelect.png");
 @readonly_marker-color:                                                       @readonly_color;
-
-// link
-@color_App-link:                                                              @secondary_color;
-@color_App-link_hover:                                                        @link_hover_text-color;
-
-
-//
 
 // Controls.Explorer
 @background-color_TileView-item: #464d57;
