--- a/Controls/Application/_theme/_links.less
+++ b/Controls/Application/_theme/_links.less
@@ -2,11 +2,11 @@
   cursor: pointer;
   text-decoration: none;
   background-color: transparent;
-  color: @color_App-link;
+  color: @link_text-color_inline;
 }
 
 .ws-is-hover .ws-link:hover,
 .ws-link:active {
   text-decoration: underline;
-  color: @color_App-link_hover;
+  color: @link_hover_text-color_inline;
 }
