--- a/Controls/Application/Application.less
+++ b/Controls/Application/Application.less
@@ -23,7 +23,7 @@ html {
 
 body {
    font-family: @font-family;
-   font-size: @font-size_App__body;
+   font-size: @font-size_default;
    color: @text-color;
    background-color: @background-color;
    text-decoration-skip: none;
