--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -701,6 +701,7 @@
    position: relative;
    background: @background-color_Grid-row_hover;
    z-index: 1;
+   .icon(@height_Grid-editArrow)
 }
 
 .controls-Grid__editArrow_style-default_background {
