--- a/Controls-default-theme/aliases/_breadcrumbs.less
+++ b/Controls-default-theme/aliases/_breadcrumbs.less
@@ -1,108 +1,81 @@
-//ХЛЕБНЫЕ КРОШКИ
-//левый отступ у крошек
-@padding-left_multiline_breadcrumbsPath:                               12px;
+// Общие переменные для хлебных крошек
+//
+// Размеры и отступы
 
-//высота крошек.
 @height_breadcrumbsView:                                               @inline_height_default;
-
-//размер шрифта для выравнивания
 @line-height_breadcrumbsView:                                          @font-size_3xl;
 
-//размер шрифта крошки
-@item_font-size_default_breadcrumbsView:                               @font-size_xs;
-
-//цвет текста крошек
-@item_text-color_default_breadcrumbsView:                              @label_text-color;
-
-//цвет текста крошки при наведении
-@item_hover_text-color_default_breadcrumbsView:                        @link_hover_text-color;
-
-//цвет текста крошки при нажатии
-@item_active_text-color_default_breadcrumbsView:                       @link_hover_text-color;
-
-//размер иконки крошек
-@item_icon-size_default_breadcrumbsView:                               @icon-size_s;
-
-//цвет иконок хлебных крошек (шеврона и стрелок)
-@item_icon-color_default_breadcrumbsView:                              @label_text-color;
-
-//цвет иконок хлебных крошек (шеврона и стрелок) при наведении
-@item_hover_icon-color_default_breadcrumbsView:                        @link_hover_text-color;
-
-//цвет иконок хлебных крошек (шеврона и стрелок) при нажатии
-@item_active_icon-color_default_breadcrumbsView:                       @link_hover_text-color;
-
-//максимальная ширина меню крошек
-@popup_max-width_breadcrumbsView:                                      800px;
-
-//высота элемента меню крошек
-@popup_item_height_breadcrumbsView:                                    @inline_height_xl;
-
-//размер иконки "отступа" в меню крошек
-@popup_item_icon-size_breadcrumbsView:                                 @icon-size_s;
-
-//цвет иконки "отступа" в меню крошек
-@popup_item_icon-color_breadcrumbsView:                                @label_text-color;
-
-//параметры тени точек
+// Тень
 @dots_shadow-offset_breadcrumbsView:                                   -15px 2px 4px -6px;
-
-//цвет тени точек
 @dots_shadow-color_breadcrumbsView:                                    @background-color;
 
-//ширина обводки элемента при наведении во время перемещения
+
+
+
+// Переменные для элементов хлебных крошек
+//
+// Текст
+@item_font-size_default_breadcrumbsView:                               @font-size_xs;
+@item_text-color_default_breadcrumbsView:                              @label_text-color;
+@item_hover_text-color_default_breadcrumbsView:                        @link_hover_text-color;
+@item_active_text-color_default_breadcrumbsView:                       @link_hover_text-color;
+
+// Иконки
+@item_icon-size_default_breadcrumbsView:                               @icon-size_s;
+@item_icon-color_default_breadcrumbsView:                              @label_text-color;
+@item_hover_icon-color_default_breadcrumbsView:                        @link_hover_text-color;
+@item_active_icon-color_default_breadcrumbsView:                       @link_hover_text-color;
+
+
+
+// Переменные для всплывающего окна с полным путем
+@popup_max-width_breadcrumbsView:                                      800px;
+@popup_item_height_breadcrumbsView:                                    @inline_height_xl;
+@popup_item_icon-size_breadcrumbsView:                                 @icon-size_s;
+@popup_item_icon-color_breadcrumbsView:                                @label_text-color;
+
+
+
+// Переменные для отображения драг'н'дропа
 @droppable_border-thickness_breadcrumbsView:                           2px;
-
-//цвет обводки элемента при наведении во время перемещения
 @droppable_border-color_breadcrumbsView:                               #0055BB;
-
-//радиус скругления уголков обводки во время перемещения
 @droppable_border-radius_breadcrumbsView:                              4px;
-
-//внутренний отступ обводки во время перемещения
 @droppable_padding-horizontal_breadcrumbsView:                         4px;
 
-//левый отступ перед домиком, когда крошки располагаются в 2 строки
+
+
+// Переменные для темизации хлебных крошек при отображении иерархии
+//
+// Размеры и отступы
+
 @padding-left_multiline_breadcrumbsPath:                               12px;
 
-//Размер иконки домика
+// Иконка "домой"
+
 @home_icon-size_breadcrumbsPath:                                       @icon-size_s;
-
-//Цвет иконки домой
 @home_icon-color_breadcrumbsPath:                                      @label_text-color;
-
-//цвет домика при наведении
 @home_hover_icon-color_breadcrumbsPath:                                @link_hover_text-color;
-
-//цвет домика при нажатии
 @home_active_icon-color_breadcrumbsPath:                               @link_hover_text-color;
-
-//отступ между домиком и крошками
 @home_offset_breadcrumbsPath:                                          4px;
 
-//отступ между кнопкой назад и домиком
+
+
+// Переменные для темизации хлебных крошек с кнопкой "назад"
+//
+// Размеры и отступы
+
 @back_offset_breadcrumbsHeadingPath:                                   8px;
-
-//цвет кнопки назад.
 @back_editButton_background-color_breadcrumbsHeadingPath:              @background-color;
-
-//размер иконки кнопки назад.
 @back_editButton_icon-size_breadcrumbsHeadingPath:                     @icon-size_s;
-
-//цвет иконки кнопки назад.
 @back_editButton_icon-color_breadcrumbsHeadingPath:                    @secondary_color;
-
-//цвет иконки кнопки назад при наведении
 @back_editButton_hover_icon-color_breadcrumbsHeadingPath:              @link_hover_text-color;
-
-//цвет иконки кнопки назад при нажатии
 @back_editButton_active_icon-color_breadcrumbsHeadingPath:             @link_hover_text-color;
-
-//цвет иконки кнопки назад в режиме чтения
 @back_editButton_readonly_icon-color_breadcrumbsHeadingPath:           @readonly_color;
-
-//отступ между кнопкой назад и счетчиком
 @back_counter_offset_breadcrumbsHeadingPath:                           4px;
+
+
+
+
 
 //TODO удалить, когда найдем другое решение.
 //цвет фона точек при наложении.
