https://online.sbis.ru/opendoc.html?guid=8a561d7a-d99c-49b5-85b2-5e108ab28bf2

--- a/Controls-demo/FormController/FormControllerDemo.less
+++ b/Controls-demo/FormController/FormControllerDemo.less
@@ -50,3 +50,14 @@ input::placeholder {
 .formControllerDemo__list {
   padding: 10px 0;
 }
+
+.formControllerDemo__record__header {
+  margin-bottom: 8px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid @warning_color;
+}
+.formControllerDemo__record {
+  width: 250px;
+  padding: 20px;
+  box-shadow: 0 0 10px @readonly_color;
+}
