часть переменных из темной темы https://online.sbis.ru/opendoc.html?guid=592a2d4d-d15e-4396-9c00-a9cc17495aeb

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -188,6 +188,8 @@
 @start-color-gradient_HorizontalScroll-shadow:                                rgba(83, 92, 104, .5);
 @end-color-gradient_HorizontalScroll-shadow:                                  rgba(83, 92, 104, 0);
 @border-color_HorizontalScroll-shadow:                                        rgba(107, 107, 107, .44);
+@color_Grid-header:                                                           #999;
+@background-color_StickyHeader:                                               transparent;
 
 
 // ItemActions
