https://online.sbis.ru/opendoc.html?guid=ff83fb44-1e8e-4ec2-a848-382cc5db9f90

--- a/Controls-demo/MasterDetail/Demo.less
+++ b/Controls-demo/MasterDetail/Demo.less
@@ -4,7 +4,8 @@
 }
 
 .controls-demo_MasterDetail_master_search_input {
-   max-width: 100%;
+  max-width: 100%;
+  width: 175px;
 }
 
 .controls-demo_MasterDetail_item-personPhoto {
