--- a/Controls/_suggest/Input/_Input.less
+++ b/Controls/_suggest/Input/_Input.less
@@ -14,6 +14,7 @@
 
 .controls-Suggest__loader_theme-@{themeName} {
 	background: @background-image_Suggest-spinner 0 0 no-repeat;
+	background-size: contain;
 	height: @height_Suggest-spinner;
 	width: @width_Suggest-spinner;
 	margin-right: @spacing_Suggest-between-spinner-clear;
