--- a/Controls-default-theme/controls/_BaseControl.less
+++ b/Controls-default-theme/controls/_BaseControl.less
@@ -12,6 +12,7 @@
 @border-radius_BaseControl-loadingIndicator:                        @border-radius_BaseControl-loadingIndicator_val;
 @min-height_BaseControl-footer-content:                             @height_control_default;
 @font-size_BaseControl-footer-content-baseline:                     @font-size_text_xl;
+@font-size_BaseControl-indicator-footerTemplate:                    @font-size_xs;
 @background-color_BaseControl-footer-paging:                        @background-color_default;
 @font-size_BaseControl-paging_label:                                @font-size_s;
 @color_BaseControl-paging_label:                                    @label_text-color;
@@ -19,8 +20,10 @@
 @color_BaseControl-abortSearch:                                     @link_text-color;
 @color_BaseControl-abortSearch_hover:                               @link_hover_text-color;
 @spacing_BaseControl-between-indicator-abortSearch:                 @spacing_default_m;
+@spacing_BaseControl-between-indicator-footerTemplate:              @spacing_default_m;
 @color_BaseControl-continueSearch:                                  @link_text-color;
 @color_BaseControl-continueSearch_hover:                            @link_hover_text-color;
+@color_BaseControl-indicator-footerTemplate:                        @unaccented_color;
 @icon-size_BaseControls-continueSearch-icon:                        @icon-size_m;
 @font-family_BaseControls-continueSearch-icon:                      @icon_font-family_m;
 @spacing_BaseControl-between-searchIcon-continueSearch:             @spacing_default_m;
