https://online.sbis.ru/opendoc.html?guid=12c8cc41-b896-4111-8778-c0174f68f594

--- a/Controls/_toggle/Button/_Button.less
+++ b/Controls/_toggle/Button/_Button.less
@@ -158,3 +158,12 @@
 .controls-Button_pushButton:active {
    box-shadow: none;
 }
+
+//TODO: will be fixed by https://online.sbis.ru/opendoc.html?guid=33010df1-501e-4874-a02c-a5f45394a661
+.controls-icon_size-stateButton_theme-@{themeName} {
+   font-size: @state-button_icon-size_datePopup;
+   line-height: @state-button_icon-size_datePopup;
+   width: @state-button_icon-size_datePopup;
+   height: @state-button_icon-size_datePopup;
+   font-family: @icon_font-family_s;
+}
