https://online.sbis.ru/opendoc.html?guid=e98eab1b-97a4-4759-a005-dc1b0e5ea8a8

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -79,7 +79,7 @@
    cursor: pointer;
 }
 .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName} {
-   color: @color_Path-backButtonArrow;
+   fill: @color_Path-backButtonArrow;
    .icon(@font-size_Path-backButtonArrow);
 }
 
@@ -147,7 +147,7 @@
       display: inline-flex;
    }
    .controls-BreadCrumbsPath__backButtonArrow_theme-@{themeName}:hover {
-      color: @color_Path-backButtonArrow_hovered;
+      fill: @color_Path-backButtonArrow_hovered;
    }
 
    .controls-BreadCrumbsPath__home_theme-@{themeName}:hover {
