--- a/Controls/_list/BaseControl/_BaseControl.less
+++ b/Controls/_list/BaseControl/_BaseControl.less
@@ -144,6 +144,7 @@ https://online.sbis.ru/opendoc.html?guid=16c81a19-f2a0-4b3f-a7e8-56d154b68e4c
    color: @color_BaseControl-paging_label;
    font-size: @font-size_BaseControl-paging_label;
 }
+
 .controls-BaseControl_paging-pageSizeChooser {
    margin-left: @spacing_BaseControl-paging_label_right;
 }
@@ -155,9 +156,9 @@ https://online.sbis.ru/opendoc.html?guid=16c81a19-f2a0-4b3f-a7e8-56d154b68e4c
 }
 
 .controls-BaseControl__loadingIndicator-footerTemplate {
-   margin-left: @spacing_BaseControl-between-indicator-footerTemplate;
-   color: @color_BaseControl-indicator-footerTemplate;
-   font-size: @font-size_BaseControl-indicator-footerTemplate;
+   margin-left: @spacing_BaseControl-between-indicator-abortSearch;
+   color: @unaccented_color;
+   font-size: @font-size_xs;
 }
 
 .ws-is-no-touch .controls-BaseControl__abortSearch:hover {
