https://online.sbis.ru/opendoc.html?guid=3cdac997-40da-4f0e-a2a5-80002df264cb

--- a/Controls-demo/FormController/FormControllerDemo.less
+++ b/Controls-demo/FormController/FormControllerDemo.less
@@ -61,3 +61,14 @@ input::placeholder {
   padding: 20px;
   box-shadow: 0 0 10px @readonly_color;
 }
+.formControllerDemo__button__pending {
+  background-color: #f4f4f4;
+  color: @readonly_color;
+  margin-left: 10px;
+  font-weight: normal;
+  padding-left: 15px;
+}
+.formControllerDemo__operation__icon {
+  .icon(20px);
+  color: @warning_color;
+}
